fix Menu overflow on large screens

--- a/src/styles/largeStyles.css
+++ b/src/styles/largeStyles.css
@@ -15,6 +15,7 @@
         position: static;
         max-width: 17rem;
         min-height: 100dvh;
+        overflow-x: hidden;
         /* border: 5px solid red; */
     }
 
